--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 </head>
 <body>
   <header>
-    <h1 class="curved-title">ChatoriGirl</h1>
-    <p>Welcome to <strong>ChatoriGirl - pani puri kahte hai</strong>!</p>
+    <h1 class="curved-title">TheAlwaysHungry</h1>
+    <p>Welcome to <strong>TheAlwaysHungry - aapka apna adda</strong>!</p>
   </header>
 
   <div class="welcome">🥳 Craving something tangy? You’re in the right place! Let’s Chalo... pani puri kahte hai!</div>
@@ -180,15 +180,19 @@
     const plateInput = document.getElementById("plate-input");
     const submitPlateBtn = document.getElementById("submit-plate");
 
-    function showMessage(msg) {
-      fancyMessage.textContent = msg;
-      fancyMessage.style.display = "block";
-    }
+  // 📝 Universal Logger
+  async function logEvent(level, message, data = {}) {
+    const logEntry = {
+      level,
+      message,
+      data,
+      url: window.location.href,
+      userAgent: navigator.userAgent,
+      timestamp: new Date().toISOString(),
+    };
 
-    rewardBtn.addEventListener("click", () => {
-      plateInput.value = "";
-      modal.style.display = "flex";
-    });
+    // console par log
+    console[level](`[Frontend ${level}]`, message, data);
 
     submitPlateBtn.addEventListener("click", async () => {
       const plateNo = plateInput.value.trim();
@@ -197,58 +201,89 @@
         return;
       }
 
-      modal.style.display = "none";
-      rewardBtn.disabled = true;
-      rewardBtn.textContent = "⏳ Checking...";
+  function showMessage(msg) {
+    fancyMessage.textContent = msg;
+    fancyMessage.style.display = "block";
+    logEvent("info", "Message shown to user", { msg });
+  }
 
-      const storedData = JSON.parse(localStorage.getItem("rewardClaim"));
-      if (storedData && storedData.plate === plateNo) {
-        showMessage(`✨ You already claimed ${storedData.reward} pani puri FREE! ✨`);
-        rewardBtn.textContent = "🎉 Reward Claimed";
+  rewardBtn.addEventListener("click", () => {
+    logEvent("info", "Reward button clicked");
+    plateInput.value = "";
+    modal.style.display = "flex";
+  });
+
+  submitPlateBtn.addEventListener("click", async () => {
+    const plateNo = plateInput.value.trim();
+    if (!plateNo) {
+      alert("🚫 Plate number is required!");
+      logEvent("warn", "Plate number missing");
+      return;
+    }
+
+    modal.style.display = "none";
+    rewardBtn.disabled = true;
+    rewardBtn.textContent = "⏳ Checking...";
+    logEvent("info", "Submitting plate number", { plateNo });
+
+    const storedData = JSON.parse(localStorage.getItem("rewardClaim"));
+    if (storedData && storedData.plate === plateNo) {
+      logEvent("info", "User already claimed reward", storedData);
+      showMessage(`✨ You already claimed ${storedData.reward} pani puri FREE! ✨`);
+      rewardBtn.textContent = "🎉 Reward Claimed";
+      return;
+    }
+
+    try {
+      const response = await fetch(EDGE_FUNCTION_URL, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization": `Bearer ${SUPABASE_ANON_KEY}`
+        },
+        body: JSON.stringify({
+          action: "get_reward",
+          plate_no: plateNo
+        })
+      });
+
+      const result = await response.json();
+      logEvent("info", "API response received", result);
+
+      if (!response.ok) {
+        showMessage(`⚠️ ${result.error || "Something went wrong."}`);
+        rewardBtn.textContent = "Try Again";
+        rewardBtn.disabled = false;
+        logEvent("error", "API error", { status: response.status, result });
         return;
       }
 
-      try {
-        const response = await fetch(EDGE_FUNCTION_URL, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            "Authorization": `Bearer ${SUPABASE_ANON_KEY}`
-          },
-          body: JSON.stringify({
-            action: "get_reward",
-            plate_no: plateNo
-          })
-        });
+      localStorage.setItem("rewardClaim", JSON.stringify({
+        reward: result.reward,
+        plate: plateNo
+      }));
 
-        const result = await response.json();
+      const displayMsg = result.message || (result.reward === 0
+        ? "😢 Oops! You got 0 pani puri free. Better luck next time!"
+        : `✨ Congratulations! You got ${result.reward} pani puri FREE! ✨`);
 
-        if (!response.ok) {
-          showMessage(`⚠️ ${result.error || "Something went wrong."}`);
-          rewardBtn.textContent = "Try Again";
-          rewardBtn.disabled = false;
-          return;
-        }
+      showMessage(displayMsg);
+      rewardBtn.textContent = "🎉 Reward Claimed";
 
-        localStorage.setItem("rewardClaim", JSON.stringify({
-          reward: result.reward,
-          plate: plateNo
-        }));
+    } catch (error) {
+      console.error(error);
+      logEvent("error", "Network/API call failed", { error: error.message });
+      showMessage("⚠️ Network error. Please try again.");
+      rewardBtn.textContent = "Try Again";
+      rewardBtn.disabled = false;
+    }
+  });
 
-        const displayMsg = result.message || (result.reward === 0
-          ? "😢 Oops! You got 0 pani puri free. Better luck next time!"
-          : `✨ Congratulations! You got ${result.reward} pani puri FREE! ✨`);
-
-        showMessage(displayMsg);
-        rewardBtn.textContent = "🎉 Reward Claimed";
-
-      } catch (error) {
-        console.error(error);
-        showMessage("⚠️ Network error. Please try again.");
-        rewardBtn.textContent = "Try Again";
-        rewardBtn.disabled = false;
-      }
-    });
-  </script>
-</body>
-</html>
+  // Global error capture
+  window.addEventListener("error", (e) => {
+    logEvent("error", "Frontend JS error", { message: e.message, file: e.filename, line: e.lineno });
+  });
+  window.addEventListener("unhandledrejection", (e) => {
+    logEvent("error", "Unhandled promise rejection", { reason: e.reason });
+  });
+</script>
