--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ChatoriGirl</title>
+  <title>Thealwayshungry</title>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+
   <style>
     body {
       margin: 0;
@@ -13,22 +14,24 @@
       color: #333;
       text-align: center;
     }
-    header {
-      background: linear-gradient(135deg, #ff4081, #7c4dff);
-      color: white;
-      padding: 30px 10px;
+
+    /* =================== NEW HERO SECTION =================== */
+    .hero-banner {
+      width: 100%;
+      height: 50vh;
+      background-image: url("hero-banner.jpeg"); /* <-- rename your banner image to this */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
-    .curved-title {
-      font-family: 'Pacifico', cursive;
-      font-size: 4rem;
-      background: linear-gradient(45deg, #ffd700, #ff4081);
-      -webkit-background-clip: text;
-      color: transparent;
-      transform: rotate(-3deg);
-      margin-bottom: 0;
-      letter-spacing: 2px;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.2);
+
+    @media (max-width: 768px) {
+      .hero-banner {
+        height: 40vh;
+      }
     }
+
+    /* ================= EXISTING CSS BELOW =================== */
     .welcome {
       margin: 40px 20px;
       font-size: 1.5rem;
@@ -106,6 +109,7 @@
       padding: 15px;
       font-size: 0.9rem;
     }
+
     #plate-modal {
       display: none;
       position: fixed;
@@ -148,17 +152,20 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1 class="curved-title">ChatoriGirl</h1>
-    <p>Welcome to <strong>ChatoriGirl - pani puri kahte hai</strong>!</p>
-  </header>
 
+  <!-- ================= HERO SECTION (REPLACED HEADER) =============== -->
+  <section class="hero-banner"></section>
+
+  <!-- ========== original content untouched ========== -->
   <div class="welcome">🥳 Craving something tangy? You’re in the right place! Let’s Chalo... pani puri kahte hai!</div>
   <div class="usp">QR SCANNED SUCCESSFULLY!</div>
   <div class="reward-info">👉 Click on "Reward" to get free pani puri!</div>
   <button class="reward-button" id="reward-btn">🎉 Reward</button>
+
   <div id="fancy-message"></div>
+
   <div class="thank-you">🙏 Thank you for visiting our page and scanning the QR!<br/>Enjoy your pani puri and keep coming back for more!</div>
+
   <footer>&copy; 2025 ChatoriGirl. All rights reserved.</footer>
 
   <div id="plate-modal">
@@ -180,26 +187,37 @@
     const plateInput = document.getElementById("plate-input");
     const submitPlateBtn = document.getElementById("submit-plate");
 
+    // 📝 Universal Logger
+    async function logEvent(level, message, data = {}) {
+      console.log(`[${level}] ${message}`, data);
+    }
+
     function showMessage(msg) {
       fancyMessage.textContent = msg;
       fancyMessage.style.display = "block";
+      logEvent("info", "Message shown to user", { msg });
     }
 
+    // ✅ Reward button click → open modal
     rewardBtn.addEventListener("click", () => {
+      logEvent("info", "Reward button clicked");
       plateInput.value = "";
       modal.style.display = "flex";
     });
 
+    // ✅ Submit plate button → call Supabase edge function
     submitPlateBtn.addEventListener("click", async () => {
       const plateNo = plateInput.value.trim();
       if (!plateNo) {
         alert("🚫 Plate number is required!");
+        logEvent("warn", "Plate number missing");
         return;
       }
 
       modal.style.display = "none";
       rewardBtn.disabled = true;
       rewardBtn.textContent = "⏳ Checking...";
+      logEvent("info", "Submitting plate number", { plateNo });
 
       const storedData = JSON.parse(localStorage.getItem("rewardClaim"));
       if (storedData && storedData.plate === plateNo) {
@@ -222,6 +240,7 @@
         });
 
         const result = await response.json();
+        logEvent("info", "API response received", result);
 
         if (!response.ok) {
           showMessage(`⚠️ ${result.error || "Something went wrong."}`);
@@ -244,10 +263,19 @@
 
       } catch (error) {
         console.error(error);
+        logEvent("error", "Network/API call failed", { error: error.message });
         showMessage("⚠️ Network error. Please try again.");
         rewardBtn.textContent = "Try Again";
         rewardBtn.disabled = false;
       }
+    });
+
+    // Global error capture
+    window.addEventListener("error", (e) => {
+      logEvent("error", "Frontend JS error", { message: e.message, file: e.filename, line: e.lineno });
+    });
+    window.addEventListener("unhandledrejection", (e) => {
+      logEvent("error", "Unhandled promise rejection", { reason: e.reason });
     });
   </script>
 </body>
