--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     .hero-banner {
       width: 100%;
       height: 50vh;
-      background-image: url("hero-banner.jpeg"); /* <-- rename your banner image to this */
+      background-image: url("heroo-banner.jpeg"); /* <-- rename your banner image to this */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -281,5 +281,6 @@
   </script>
 </body>
 </html>
+
 
 
